service.yml
apiVersion: v1
kind: Service
metadata:
  name: emotion-recognition
  labels:
    app: emotion-recognition
spec:
  type: LoadBalancer
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: emotion-recognition
